--- a/history-sync/angular.json
+++ b/history-sync/angular.json
@@ -37,9 +37,9 @@
               }
             ],
             "styles": [
+              "src/main.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-              "src/main.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
